--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,11 @@ dependencies:
   cupertino_icons: ^0.1.3
   google_fonts: ^1.1.0
   get_it: ^4.0.2
+  http: ^0.12.2
   injectable: 
-  stacked: ^1.6.0
   json_serializable: ^3.3.0
   json_annotation: ^3.0.1
+  stacked: ^1.6.0
 
 dev_dependencies:
   flutter_test:
